[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
grpc-client = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
chrono = { workspace = true }
borsh = { workspace = true }
base64 = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
spl-token = { workspace = true }
lazy_static = { workspace = true }
analyzer-protos = { workspace = true }
tonic = { workspace = true }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
tokio-stream = "0.1.17"
pretty_env_logger = "0.5.0"
yellowstone-grpc-client = { version = "6.0.0" }
