[package]
name = "grpc-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
yellowstone-grpc-client = { version = "6.0.0" }
yellowstone-grpc-proto = { workspace = true }