[package]
name = "sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
grpc-client = { workspace = true }
anyhow = {workspace = true}
tokio = {workspace = true}
futures-util = {workspace = true}
dotenvy = {workspace = true}
log = {workspace = true}
solana-sdk = {workspace = true}
solana-transaction-status = {workspace = true}
chrono = {workspace = true}
borsh = {workspace = true}
base64 = {workspace = true}
yellowstone-grpc-proto = {workspace = true}
spl-token = {workspace = true}
lazy_static = {workspace = true}
jito-protos = { workspace = true }
analyzer-protos = { workspace = true }
tonic = { workspace = true, features = [ "tls", "tls-roots", "tls-webpki-roots" ] }
sniper-protos = {workspace = true}

prost = "0.12.0"
solana-program = "=2.2.1"
bincode = "1.3.3"
solana-entry = "2.2.1"
bs58 = "0.5.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7.0"
num_cpus = "1.16.0"
once_cell = "1.18.0"
spl-associated-token-account = "6.0.0"
solana-rpc-client-nonce-utils = "2.2.1"
serde_json = "1.0.140"
solana-client = "=2.2.1"
rand = "0.9.0"
tracing = "0.1.40"
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
spl-token-client = "<1.4"
solana-account-decoder = "=2.2.1"
spl-token-2022 = "7.0.0"
futures = "0.3"
tokio-stream = "0.1.17"
dashmap = "5.0"
